Auto IK doesn't respect its Length setting #52224

Closed
opened 2017-07-30 02:43:08 +02:00 by Alex · 8 comments

System Information
Intel Core 2 Quad, 8 Gb RAM, NVidia GeForce GTX 960 2GB
Windows 7 x64

Blender Version
Broken: 2.78.6 fb1cd76
Worked: 2.78c and older daily builds up to a certain point

Short description of error
AutoIK option seems to forget the number of AutoIK Length assigned to it every time you stop moving the bone.

Exact steps for others to reproduce the error
You can use provided file to test this - open the file and try to move the selected bone. You will notice that Auto IK uses all chain despite the fact that its length is set to 4. If you change the segment length it will work properly until you release the mouse.
AutoIK_Bug.blend

  1. Open Blender, create an Armature and make a chain of bones.
  2. In Tools - Options turn on Auto IK. Start moving the last bone in the chain and set IK Length to 2 or 3. Notice that Auto IK respects that change.
  3. Release the mouse and drag again.
  • In 2.78c and some earlier daily builds everything will work as expected.
  • In 2.78.6 fb1cd76 IK chain will act as if chain length is not set despite showing fixed length.
**System Information** Intel Core 2 Quad, 8 Gb RAM, NVidia GeForce GTX 960 2GB Windows 7 x64 **Blender Version** Broken: 2.78.6 fb1cd76 Worked: 2.78c and older daily builds up to a certain point **Short description of error** AutoIK option seems to forget the number of AutoIK Length assigned to it every time you stop moving the bone. **Exact steps for others to reproduce the error** You can use provided file to test this - open the file and try to move the selected bone. You will notice that Auto IK uses all chain despite the fact that its length is set to 4. If you change the segment length it will work properly until you release the mouse. [AutoIK_Bug.blend](https://archive.blender.org/developer/F685988/AutoIK_Bug.blend) 1. Open Blender, create an Armature and make a chain of bones. 2. In Tools - Options turn on Auto IK. Start moving the last bone in the chain and set IK Length to 2 or 3. Notice that Auto IK respects that change. 3. Release the mouse and drag again. - In 2.78c and some earlier daily builds everything will work as expected. - In 2.78.6 fb1cd76 IK chain will act as if chain length is not set despite showing fixed length.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

Added subscribers: @ideasman42, @brecht, @mont29

Added subscribers: @ideasman42, @brecht, @mont29

Confirmed, looks like a regression (unless it was changed on purpose)… @ideasman42 , @brecht, think you are those who know that code best, mind checking? thanks.

Confirmed, looks like a regression (unless it was changed on purpose)… @ideasman42 , @brecht, think you are those who know that code best, mind checking? thanks.

This issue was referenced by becb413f29

This issue was referenced by becb413f29e4a04400b20f27510393133d2bdfff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Sergey

Added subscriber: @Sergey

Due to a7a5c20fbc, it was skipping the initial update when starting the transform.

Due to a7a5c20fbc, it was skipping the initial update when starting the transform.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52224
No description provided.