Fix T52224: auto IK not respecting length, after recent bugfix.